# ragtrieverdb

./: Cargo.toml  LICENSE  README.md  TODO.md
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/db/: Cargo.toml
crates/db/src/command/: get.rs  mod.rs  publish.rs
crates/db/src/db/: database.rs
crates/db/src/objstore/: s3.rs
crates/db/src/server/: mod.rs
examples/: load.rs
src/: lib.rs
src/clients/: mod.rs
src/command/: set.rs  subscribe.rs
src/constants/: mod.rs
src/objstore/: s3.rs
tests/ft/: mod.rs
