[package]
name = "ragtrieverdb"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Kruer tyler@tkruer.com"]


[[bin]]
name = "ragtriever-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "ragtriever-server"
path = "src/bin/server.rs"

[dependencies]
atoi = "2.0.0"
bincode = "1.3.3"
bytes = "1.10.1"
chrono = "0.4.40"
clap = "4.5.32"
serde = "1.0.219"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
