[package]
name = "ragtriever-api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
atoi = "2.0.0"
bincode = "1.3.3"
bytes = "1.10.1"
chrono = "0.4.40"
opentelemetry = { version = "0.29.0" }
serde = "1.0.219"
tokio = { version = "1.44.1", features = ["full", "test-util"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-opentelemetry = { version = "0.30.0" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
axum = "0.8.3"
